--- a/angular-delivery-front/src/app/components/dish/dish.component.html
+++ b/angular-delivery-front/src/app/components/dish/dish.component.html
@@ -16,4 +16,18 @@
     <p> <span class="font-bold">Описание: </span> {{ dish.description }}</p>
   </div>
 
+  <div class="
+    display: flex;
+  ">
+    <button
+      class="rounded-full bg-yellow-400 text-white p-3 ml-auto mr-auto h-[30px] w-[30px] position-center"
+    >+</button>
+    <span
+      class="p-3"
+    >TODO - count</span>
+    <button
+      class="rounded-full bg-yellow-400 text-white p-3"
+    >-</button>
+  </div>
+
 </div>
