--- a/angular-delivery-front/src/app/app.component.html
+++ b/angular-delivery-front/src/app/app.component.html
@@ -1,6 +1,8 @@
 <app-global-error></app-global-error>
 
-<div class="max-w-2xl container mx-auto pt-5">
+<app-navigation></app-navigation>
+
+<div class="max-w-2xl container mx-auto pt-5 mt-[50px]">
 
   <router-outlet></router-outlet>
 
