--- a/angular-delivery-front/src/app/components/restaurant/restaurant.component.html
+++ b/angular-delivery-front/src/app/components/restaurant/restaurant.component.html
@@ -1,5 +1,5 @@
 <div class="py-4 px-6 border rounded flex items-center flex-col mb-2">
-  <img src="https://chefrestoran.ru/wp-content/uploads/2018/10/532869931.jpg" [alt]="rest.name" class="w-1/6 mb-2">
+  <img src="https://i7.photo.2gis.com/images/branch/18/2533274796151957_e446.jpg" [alt]="rest.name" class="w-1/6 mb-2">
   <h2 class="mb-2 text-md text-center">{{ rest.name }}</h2>
   <p>Открыт с
     <span class="font-bold">{{ this.openDate.getHours() + ':' + this.openDate.getMinutes() }}</span>
@@ -23,7 +23,7 @@
 
   <button
     class="border py-2 px-4 rounded bg-yellow-400"
-    routerLink="/dishes"
+    [routerLink]="['/dishes', rest.id]"
     (click)="restService.restId = this.rest.id"
   >Заказать здесь</button>
 
