--- a/angular-delivery-front/src/app/components/restaurant/restaurant.component.html
+++ b/angular-delivery-front/src/app/components/restaurant/restaurant.component.html
@@ -2,27 +2,22 @@
   <img src="https://i7.photo.2gis.com/images/branch/18/2533274796151957_e446.jpg" [alt]="rest.name" class="w-1/6 mb-2">
   <h2 class="mb-2 text-md text-center">{{ rest.name }}</h2>
   <p>Открыт с
-    <span class="font-bold">{{ this.openDate.getHours() + ':' + this.openDate.getMinutes() }}</span>
+    <span class="font-bold">{{
+        (this.openDate.getHours() < 10 ? '0' : '') + this.openDate.getHours()
+      + ':'
+        + (this.openDate.getMinutes() < 10 ? '0' : '') + this.openDate.getMinutes()
+      }}</span>
     до
-    <span class="font-bold">{{ this.closeDate.getHours() + ':' + this.closeDate.getMinutes() }}</span>
+    <span class="font-bold">{{
+        (this.closeDate.getHours() < 10 ? '0' : '') +  this.closeDate.getHours()
+      + ':'
+        + (this.closeDate.getMinutes() < 10 ? '0' : '') + this.closeDate.getMinutes()
+      }}</span>
   </p>
-  <p>Рейтинг: {{ rest.rating | number:'.2'}}</p>
+  <p><span class="font-bold">Адрес: </span> {{ rest.address }}</p>
 
   <button
-    class="border py-2 px-4 rounded"
-    [ngClass]="{
-      'bg-yellow-400': !details,
-      'bg-blue-400': details
-    }"
-    (click)="details = !details"
-  > {{ details ? 'Скрыть' : 'Показать' }} детали</button>
-
-  <div *ngIf="details">
-    <p> <span class="font-bold">Адрес: </span> {{ rest.address }}</p>
-  </div>
-
-  <button
-    class="border py-2 px-4 rounded bg-yellow-400"
+    class="mt-2 border py-2 px-4 rounded bg-yellow-400"
     [routerLink]="['/dishes', rest.id]"
     (click)="restService.restId = this.rest.id"
   >Заказать здесь</button>
